# pyshapley2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pyshapley2/: __init__.py  _core.py  _estimators.py  _result.py  constants.py
tests/: test_shapley2.py
